--- a/NASFECO/html/index.html
+++ b/NASFECO/html/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="logo">
-            <img src="/static/icons/Logo.jpg" alt="NASFECO S.A">
+            <img src="/NASFECO/static/icons/Logo.jpg" alt="NASFECO S.A">
         </div>
         <nav>
             <ul>
@@ -20,7 +20,7 @@
                 <li><a href="#contacto">Contacto</a></li>
             </ul>
         </nav>
-        <a href="https://wa.me/" class="whatsapp-icon"><img src="../static/icons/redes-sociales/whatsapp.png" alt="WhatsApp"></a>
+        <a href="https://wa.me/" class="whatsapp-icon"><img src="/NASFECO/static/icons/redes-sociales/whatsapp.png" alt="WhatsApp"></a>
     </header>
 
     <section class="hero">
@@ -30,7 +30,7 @@
             <a href="#cotizacion" class="cta-button">Solicitar Cotización</a>
         </div>
         <div class="hero-image">
-            <img src="/static/icons/Filtro.avif" alt="Sistema de Filtrado">
+            <img src="/NASFECO/static/icons/Filtro.avif" alt="Sistema de Filtrado">
         </div>
     </section>
 
