--- a/NASFECO/html/index.html
+++ b/NASFECO/html/index.html
@@ -22,9 +22,6 @@
         </nav>
         <a href="https://wa.me/" class="whatsapp-icon"><img src="/NASFECO/static/icons/redes-sociales/whatsapp.png" alt="WhatsApp"></a>
     </header>
-    <section class="hero2">
-
-    <!-- Sección de introducción con imagen de fondo y título -->
     <section class="intro">
         <div class="intro-overlay">
             <img src="/NASFECO/static/icons/Agua.avif" alt="Agua Potable">
@@ -34,8 +31,8 @@
     
     <section class="hero">
         <div class="hero-text">
-            <h2>Sistema Modular de Filtrado de Agua Comunitario</h2>
-            <p>Optimización del acceso a agua limpia en comunidades rurales mediante tecnologías sostenibles.</p>
+            <h2>Purificadores de Agua</h2>
+            <p>Los purificadores de agua mediante ósmosis inversa (RO) ofrecen una solución avanzada para la purificación del agua, eliminando contaminantes a nivel molecular. Aunque no operan directamente con energía solar, su eficacia en la obtención de agua limpia y segura sigue siendo una opción valiosa para comunidades y hogares. Estos sistemas avanzados de purificación contribuyen a la disponibilidad de agua potable confiable y de alta calidad.</p>
         </div>
         <div class="hero-image">
             <img src="/NASFECO/static/icons/image.avif" alt="Sistema de Filtrado">
@@ -52,9 +49,12 @@
             <p style="margin-bottom: 1em;">• Fácil instalación <br> No requiere infraestructura compleja ni conocimientos técnicos avanzados.</p>
             <p style="margin-bottom: 1em;">• Sostenible y ecológico <br> Minimiza el uso de plásticos desechables y promueve el reciclaje de materiales.</p>
 
-</div>
+        </div>
         <div class="hero-image">
-            <img src="/NASFECO/static/icons/Filtro.avif" alt="Sistema de Filtrado">
+            <img src="/NASFECO/static/icons/img.jpg" alt="Sistema de Filtrado">
+            <br>
+            <br>
+            <a href="https://drive.google.com/file/d/1Mn0TgfhI-GtzT7XSr-amaEpOFWYOvdn6/view?usp=sharing" class="cta-button">Ver en 3D</a>
         </div>
     </section>
     <section class="hero3">
